// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> renders the disabled state 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "#0059bf",
        "borderColor": "transparent",
        "borderRadius": 12,
        "minHeight": 48,
        "opacity": 0.5,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "includeFontPadding": false,
          },
          {
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.25,
            "lineHeight": 20,
          },
          {
            "color": "#07090d",
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Save
    </Text>
  </View>
</View>
`;

exports[`<Button> renders the ghost variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "transparent",
        "borderColor": "transparent",
        "borderRadius": 12,
        "minHeight": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "includeFontPadding": false,
          },
          {
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.25,
            "lineHeight": 20,
          },
          {
            "color": "#07090d",
          },
          {
            "color": "#0059bf",
          },
        ]
      }
    >
      OK
    </Text>
  </View>
</View>
`;

exports[`<Button> renders the loading state 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "#0059bf",
        "borderColor": "transparent",
        "borderRadius": 12,
        "minHeight": 48,
        "opacity": 0.5,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    color="#FFFFFF"
  />
</View>
`;

exports[`<Button> renders the primary variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "#0059bf",
        "borderColor": "transparent",
        "borderRadius": 12,
        "minHeight": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "includeFontPadding": false,
          },
          {
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.25,
            "lineHeight": 20,
          },
          {
            "color": "#07090d",
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      OK
    </Text>
  </View>
</View>
`;

exports[`<Button> renders the secondary variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "#f6f9fd",
        "borderColor": "#bec5ce",
        "borderRadius": 12,
        "minHeight": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "includeFontPadding": false,
          },
          {
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.25,
            "lineHeight": 20,
          },
          {
            "color": "#07090d",
          },
          {
            "color": "#07090d",
          },
        ]
      }
    >
      OK
    </Text>
  </View>
</View>
`;
